--- a/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
+++ b/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
@@ -196,7 +196,7 @@
         <!--Skill-->
         <scene sceneID="80c-YO-0Px">
             <objects>
-                <collectionViewController id="syJ-EW-vZW" sceneMemberID="viewController">
+                <collectionViewController id="syJ-EW-vZW" customClass="SkillCollectionViewController" customModule="Pagorn_Resume_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ttY-aj-M5q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -208,7 +208,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="skillCellIdentifier" id="jTO-cf-pgx">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="skillCellIdentifier" id="jTO-cf-pgx" customClass="SkillCollectionViewCell" customModule="Pagorn_Resume_iOS" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="167" height="179"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -218,15 +218,6 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gqe-IW-IMW">
                                             <rect key="frame" x="0.0" y="0.0" width="167" height="179"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Java" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cW5-2E-xSV">
-                                                    <rect key="frame" x="66" y="37" width="35" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="1nh-fe-6EJ"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.95686274509803915" green="0.95294117647058818" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0q7-f4-a7W" customClass="UICircularProgressRingView" customModule="UICircularProgressRing">
                                                     <rect key="frame" x="30" y="58" width="106" height="106"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -278,6 +269,15 @@
                                                     <color key="textColor" red="0.95686274509803915" green="0.95294117647058818" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Java" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cW5-2E-xSV">
+                                                    <rect key="frame" x="66" y="37" width="35" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="1nh-fe-6EJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.95686274509803915" green="0.95294117647058818" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" red="0.14117647059999999" green="0.1333333333" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
@@ -298,6 +298,11 @@
                                     <constraint firstItem="Gqe-IW-IMW" firstAttribute="top" secondItem="jTO-cf-pgx" secondAttribute="top" id="nqo-kF-TiZ"/>
                                     <constraint firstAttribute="trailing" secondItem="Gqe-IW-IMW" secondAttribute="trailing" id="yWS-DG-aXW"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="labelDetail" destination="cW5-2E-xSV" id="cjt-Df-Wu9"/>
+                                    <outlet property="labelName" destination="vET-C8-Msu" id="EAo-dv-9Vb"/>
+                                    <outlet property="viewCircularProgress" destination="0q7-f4-a7W" id="mn9-wl-abh"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
